impl(qa): query performance tests
Related with OPE-495